# python-django-developer-project-52

./: README.md  requirements.txt
hexlet-code/: .gitignore  pyproject.toml  requirements.txt
hexlet-code/task_manager/: settings.py
hexlet-code/task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/: settings.py
