[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["eggusik <wakeupsinner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django-bootstrap5 = "^23.4"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
